# memorax

./: .gitignore  Makefile.am  README  README.md  configure.ac
doc/: Makefile.am  biblio.bib  grammar.simplified.txt  grammar.txt  manual.tex
doc/examples/: clh.rmm
doc/examples/dual-examples/: README_experiment.md  burns_3.rmm  burns_4.rmm  dekker_simple.rmm  iriw.rmm  iriw_1_1_1_2.rmm  iriw_1_1_2_2.rmm  iriw_1_2_2_2.rmm  iriw_2_2_2_2.rmm  iriw_2_2_2_3.rmm  iriw_2_2_3_3.rmm  iriw_2_3_3_3.rmm  iriw_3_3_3_3.rmm  iriw_3_3_3_4.rmm  isa2.rmm  isa2_1_1_2.rmm  isa2_1_2_2.rmm  isa2_2_2_2.rmm  isa2_2_2_3.rmm  isa2_2_3_3.rmm  isa2_3_3_3.rmm  isa2_3_3_4.rmm  isa2_3_4_4.rmm  lamport_fast_3.rmm  lb.rmm  lb_1_2.rmm  lb_2_2.rmm  lb_2_3.rmm  lb_3_3.rmm  lb_3_4.rmm  lb_4_4.rmm  lb_4_5.rmm  lb_5_5.rmm  mp.rmm  mp_1_2.rmm  mp_2_2.rmm  mp_2_3.rmm  mp_3_3.rmm  mp_3_4.rmm  mp_4_4.rmm  (+67 more)
doc/examples/splash2/: barnes1.rmm  barnes2.rmm  cholesky.rmm  radiosity.rmm  raytrace.rmm  volrend.rmm
src/: Makefile.am  ap_list.h  ap_list.tcc  automaton.cpp  automaton.h  cegar_reachability.cpp  cegar_reachability.h  channel_bwd.cpp  channel_bwd.h  channel_constraint.cpp  channel_constraint.h  channel_container.cpp  channel_container.h  cmsat.h  constraint.h  constraint_container.h  constraint_container1.cpp  constraint_container1.h  dual_channel_bwd.cpp  dual_channel_bwd.h  dual_channel_constraint.cpp  dual_channel_constraint.h  dual_channel_container.cpp  dual_channel_container.h  dual_constraint.cpp  dual_constraint.h  dual_tso_bwd.cpp  dual_tso_bwd.h  dual_zstar.h  dual_zstar.tcc  exact_bwd.cpp  exact_bwd.h  fence_sync.cpp  fence_sync.h  fencins.cpp  fencins.h  gui.py  hsb_constraint.cpp  hsb_constraint.h  hsb_constraint.test.cpp  (+114 more)
